--- a/css/style.css
+++ b/css/style.css
@@ -4,113 +4,98 @@
 }
 
 body {
-    font-family: helvetica, sans-serif;
-    background-color: #090e16;
-    color: #fff;
+font-family: Helvetica, sans-serif;
+background-color: #090e16;
+color: #fff;
 }
 
-
-/* sans-serif en caso no haya helvetica*/
-nav {
-    display: flex;
-    /* space-betwen: separa elementos de extremos a extremo*/
-    justify-content: space-between;
+.align-center {
     align-items: center;
-    background-color: rgba(123, 74, 226, 0.5);
-  /* margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left: 80px;
-  margin-right: 80px; */
-  margin: 30px 80px;
-  padding: 15px;
-  border-radius: 16px;
+}
+
+nav {
+    display: flex; 
+    justify-content: space-between; /*  separa elementos entre si*/
+    background-color: rgba(123, 74, 226, 0.05);
+    /* margin-top: 30px;
+    margin-bottom: 30;
+    margin-left: 80px;
+    margin-right: 80px */
+    margin: 30px 80px;
+    padding: 10px;
+    border-radius: 16px;
 }
 .nav-list {
-    /* acceder a la clase en css: .nav*/
-   
     display: flex;
-    list-style: none;
-    /* espacio entre cada elemto del contenedor */
-    gap: 20px;
+    list-style: none;     /* quitar biñetas */
+    gap: 20px;  /* obtener espacio entre cada item, solo si existe display: flex */
+   
 }
 
 .nav-list > li > a {
-    text-decoration: none;
-    color: #fff;   /* property value expected */
+    text-decoration: none; /* quitar el subrayado */
+    color: #fff;
 }
 
-.nav-list > li > a:hover{
+.nav-list  > li > a:hover{
     color: rgba(123, 74, 226, 0.5);
 }
-
-main {
-    height: 50vh;
-    display: felx;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px;
+main{
+height: 50vh;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 20px;
 }
-
-
-.getting {
-    background-color: rgb(123, 74, 226)0.5;
-    color: rgb(123, 74, 226)0.5;
-    padding: 80px;
+.gretting {
+    background-color: rgba(123, 74, 226, 0.05); 
+    color: rgba(123, 74, 226, 0.5);
+    padding: 8px;
     border-radius: 16px;
-
+    margin-bottom: 10px;
 }
 
 .title {
-font-size: 52px;
-margin-top: 20px;
-margin-bottom: 20px;
-
+    font-size: 52px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
-
 .description {
     font-size: 20px;
     color: rgba(255, 255, 255, 0.5);
     font-weight: 300;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+}
+.social-links {
+    display: flex;
+    gap: 20px;
 
 }
-.social-link {
-    display: flex;
-    gap: 15px;
-    align-items: center;
 
- }
-.container-profile > img {
-    width: 435px;
-    height: 400px;
+.container-profile > img { 
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
 }
-
 .container-contact {
     display: flex;
-    flex-direction: column ;
-    gap: 20px; 
-    align-items: end;    /* las propiedades se invierten */      
-
+    flex-direction: column;
+    gap: 20px;
+   align-items: end;
 }
 
 .container-contact > a {
     text-decoration: none;
-    color: rgba(123, 74, 226, 0.5)
+    color: rgba(123, 74, 226, 0.5);
 }
-
 .container-contact > a:first-child {
     display: flex;
-    align-items: conter;
     gap: 5px;
 }
-
-.container-contact > a:last-child{
-    border: rgba(123, 74, 226, 0.5) solid;
+.container-contact > a:last-child {
+    border: solid rgba(123, 74, 226, 0.5);
     display: flex;
-    align-items: center;
     gap: 5px;
     padding: 5px;
-    border-radius: 16px;
-
+    border-radius: 16px
 }
